--- a/todo
+++ b/todo
@@ -1,15 +1,15 @@
-Application must be responsive and mobile friendly
+1. Application must be responsive and mobile friendly ✅
+
+2. Please include unit tests ✅
+
+3. few popular TV shows based on their rating and genre ✅
+
+4. user clicks on a TV show then the details of that TV show should be displayed on another screen. ✅
+
+5. the user should be able to search for a TV show to get the details. ✅
+
+6. list (drama, comedy, sports, etc.). Did not find api for it.
 
 Please create a readme file that explains your architectural decisions (E.G. why did
 you choose a specific framework) and make sure you include instructions on how to
-run your solution
-
-Please include unit tests
-
-list (drama, comedy, sports, etc.).
-
-few popular TV shows based on their rating and genre ✅
-
-user clicks on a TV show then the details of that TV show should be displayed on another screen. ✅
-
-the user should be able to search for a TV show to get the details. ✅
+run your solution ✅
